--- a/src/main/resources/templates/error.mustache.html
+++ b/src/main/resources/templates/error.mustache.html
@@ -9,7 +9,7 @@
           crossorigin="anonymous">
 </head>
 <body>
-<div class="d-flex align-items-center" style="height: 100vh;">
+<div class="d-flex align-items-center" style="min-height: 100vh;">
     <div class="container text-center">
         <h1 class="display-1">{{ status }}</h1>
         <p class="lead">{{ error }}</p>
