--- a/src/main/resources/templates/error.mustache.html
+++ b/src/main/resources/templates/error.mustache.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="utf-8">
     <title>{{ status }} - {{ error }}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
           rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+          integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
           crossorigin="anonymous">
+    <script>
+        (function () {
+            const mediaMatcher = "(prefers-color-scheme: dark)";
+            function updateBootstrapTheme() {
+                document.querySelector("html").setAttribute("data-bs-theme", window.matchMedia(mediaMatcher).matches ? "dark" : "light");
+            }
+            window.matchMedia(mediaMatcher).addEventListener("change", updateBootstrapTheme);
+            updateBootstrapTheme();
+        })();
+    </script>
 </head>
 <body>
 <div class="d-flex align-items-center" style="min-height: 100vh;">
